<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialogCardView"
        android:layout_width="296dp"
        android:layout_height="228dp"
        app:cardCornerRadius="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/headerDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/urbanist"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/dear_user" />

        <TextView
            android:id="@+id/descriptionDialogTextView"
            android:layout_width="170dp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/urbanist_semibold"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_main_text"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/cancelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_gravity="bottom"
            android:layout_marginBottom="34dp"
            android:layout_marginStart="57dp"
            android:fontFamily="@font/urbanist"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/startBtnImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="150dp"
            app:srcCompat="@drawable/ic_start_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/start"
            android:fontFamily="@font/urbanist"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="36dp"
            android:layout_marginStart="190dp"/>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>