<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.GalleryActivity">


    <View
        android:id="@+id/headerViewMainActivity"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist"
        android:text="@string/galley"
        android:textColor="#47484C"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/headerViewMainActivity"
        app:layout_constraintEnd_toEndOf="@+id/headerViewMainActivity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/headerViewMainActivity"
        app:layout_constraintTop_toTopOf="@+id/headerViewMainActivity" />

    <ImageButton
        android:id="@+id/imageBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/headerTextView"
        app:layout_constraintEnd_toStartOf="@+id/headerTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/headerViewMainActivity"
        app:layout_constraintTop_toTopOf="@+id/headerTextView"
        app:srcCompat="@drawable/ic_back_btn" />

    <ImageButton
        android:id="@+id/imageBtnCrown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/headerTextView"
        app:layout_constraintEnd_toEndOf="@+id/headerViewMainActivity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/headerTextView"
        app:layout_constraintTop_toTopOf="@+id/headerTextView"
        app:srcCompat="@drawable/ic_crown" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/galleryViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/galleryTabLayout">

    </androidx.viewpager2.widget.ViewPager2>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/galleryTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:tabTextColor="@color/black"
        app:tabTextAppearance="@style/tab_text"
        app:tabIndicatorColor="#2EFF7C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerViewMainActivity">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photos" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/videos" />
    </com.google.android.material.tabs.TabLayout>


</androidx.constraintlayout.widget.ConstraintLayout>